# silo

./: .gitignore  config.py  manage.py  pyproject.toml  requirements.txt
Silo/: asgi.py  settings.py  urls.py  wsgi.py
files/: models.py  serializers.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_file_file_type.py
users/: auth0_jwt.py  authenticators.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
